[package]
name = "server_type"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "8.0", features = ["prettyprint"] }
async-trait = "0.1"
bytes = "1.0"
data_types = { path = "../data_types" }
datafusion = { path = "../datafusion" }
db = { path = "../db" }
dml = { path = "../dml" }
futures = "0.3"
generated_types = { path = "../generated_types" }
http = "0.2.0"
hyper = "0.14"
influxdb_iox_client = { path = "../influxdb_iox_client", features = ["flight", "format", "write_lp"] }
iox_clap_blocks = { path = "../iox_clap_blocks" }
job_registry = { path = "../job_registry" }
metric = { path = "../metric" }
observability_deps = { path = "../observability_deps" }
predicate = { path = "../predicate" }
prost = "0.9"
query = { path = "../query" }
serde = { version = "1.0", features = ["derive"] }
server = { path = "../server" }
snafu = "0.7"
tokio = { version = "1.13", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.6.9" }
tonic = "0.6"
trace = { path = "../trace" }
uuid = { version = "0.8", features = ["v4"] }
